@@ -46,6 +46,8 @@ you also need L<Compress::Zlib>.
 
 =head1 OPTIONS
 
+    --version    Print script and Perl version
+
     --verbose    Show more detailed progress
 
     --debug      Show much more information
@@ -97,7 +99,7 @@ warnings during the run.
 
 Then, to install those distributions into a new library:
 
-    cpanm --mirror file:$PWD/my_cpan --mirror-only [-l new_lib] < installed_dists.txt
+    cpanm --from file:$PWD/my_cpan [-l new_lib] < installed_dists.txt
 
 It's very likely that some distributions will fail tests and not install,
 which will, in turn, cause others to fail. Once the initial run is complete
@@ -111,11 +113,11 @@ it to skip those that it knows are already installed. The L</--makecpan> option
 writes a list of 'token packages', one per distribution, so you can use that
 with cpanm:
 
-    cpanm --mirror file:$PWD/my_cpan --mirror-only [-l new_lib] < my_cpan/dist_surveyor/token_packages.txt
+    cpanm --from file:$PWD/my_cpan [-l new_lib] < my_cpan/dist_surveyor/token_packages.txt
 
 When a distro fails tests I use the cpanm C<--look> option to investigate:
 
-    cpanm --mirror file:$PWD/my_cpan --mirror-only --look Some::Package
+    cpanm --from file:$PWD/my_cpan --look Some::Package
 
 I'll often end up building, testing and installing the distro from within that
 cpanm look shell. Once installed I'll rerun cpanm using the full C<token_packages.txt>
