@@ -1,6 +1,7 @@
 Revision history for Dist-Surveyor
 
 {{$NEXT}}
+	- Update documentation to use cpanm --from instead of --mirror for local installation
 
 0.019     2017-06-09 01:32:40-04:00 America/New_York
 	- Bump HTTP::Tiny requirement to 0.056 for can_ssl
